# percent-encoding-rfc3986

./: Cargo.toml
.github/workflows/: fuzz.yml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: decode.rs  encode.rs  round_trip.rs  rt.rs
src/: error.rs  lib.rs
